fixed alignment differences between pages

--- a/components/countdown/countdown.css
+++ b/components/countdown/countdown.css
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	padding-top: 6rem;
+	padding-top: 2rem;
 	align-items: center;
 }
 
@@ -91,8 +91,5 @@
 	.countdown-item{
 		padding-left: 0.5rem;
 		padding-right: 0.5rem;
-	}
-	.countdown-container {
-		padding-top: 14rem;
 	}
 }
